# attention-free-phase-blocks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
api/: README.md  __init__.py  inference.py  schemas.py  server.py
docs/: ARCHITECTURE.md  USAGE.md  __init__.py
examples/: api_client.py
src/: __init__.py  afrb.py  phase_curvature.py  phase_memory.py  train.py  utils_alignment.py
