[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attention-free-phase-blocks"
version = "0.1.0"
description = "Attention-free transformer variants with log-periodic phase blocks and compact memory: code and experiments for language modeling and synthetic needle-in-a-haystack retrieval"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Damjan Žakelj"}
]
keywords = ["machine learning", "neural networks", "resonance", "phase dynamics", "attention mechanism", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Deep Learning Framework
    "torch>=2.0.0",
    "transformers>=4.30.0",

    # Data Processing
    "numpy>=1.24.0",
    "datasets>=2.12.0",

    # Training Infrastructure
    "accelerate>=0.20.0",
    "bitsandbytes>=0.39.0",

    # Metrics & Logging
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",

    # Scientific Computing
    "scipy>=1.10.0",

    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]
wandb = ["wandb>=0.15.0"]
tensorboard = ["tensorboard>=2.13.0"]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/Freeky7819/attention-free-phase-blocks"

[project.scripts]
resonant-train = "train:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
